--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,36 @@ nav ul li a {
   text-decoration: none;
 }
 
+.sidenav {
+  height: 100%;
+  width: 200px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  padding-top: 20px;
+}
+
+.sidenav nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.sidenav nav ul li {
+  padding: 8px;
+  text-align: center;
+}
+
+.sidenav nav ul li a {
+  color: white;
+  text-decoration: none;
+  display: block;
+}
+
+.sidenav nav ul li a:hover {
+  background-color: #575757;
+}
+
 main {
   padding: 20px;
 }
